# lca-stack

./: .gitignore  .lca_run_id  README.md  pyproject.toml  requirements.txt
examples/autonomy/: spot_keyboard.py
examples/webots/project/controllers/adapter_webots_spot/: Bezier.py  LegKinematics.py  LieAlgebra.py  SpotKinematics.py  adapter_webots_spot.py
examples/webots/project/worlds/: .spot_world.wbproj  spot_world.wbt
idl/: lca_stack_dds.idl
proto/: lca_stack.proto
src/lca_stack/: __init__.py  __main__.py
src/lca_stack/daemon/: bridge.py  cli.py  safety.py  server.py
src/lca_stack/dds/: __init__.py  bus.py  qos.py  types.py
src/lca_stack/ipc/: __init__.py  clock.py  framing.py  header.py  jsonl.py  protocol.py  structs.py  validate.py
src/lca_stack/log/: __init__.py  mcap_logger.py
src/lca_stack/proto/: __init__.py  lca_stack_pb2.py
src/lca_stack/run/: __init__.py  manifest.py
